# fmcw-surveillance-radar

./: .gitignore  24GHz_simulation.cst  LICENSE  README.md
doc/: README.md
doc/documentation/: abbreviations.tex  appendix.tex  basic_latex_declarations.tex  bibliography.bib  conclusion.tex  doc.tex  doc.xmpdata  doc_setup.tex  introduction.tex  literature.bib  literature.tex  metadata.tex  title_page.tex
doc/documentation_mini/: bibliography.bib  bibliography.tex  conclusion.tex  doc.mmz  doc.tex  introduction.tex  metadata.tex  presentation.tex
doc/img/: logo.tex
doc/poster/: poster.tex
doc/presentation/: pres.tex
doc/templates/: dimensions_paper.tex  doc_paper.tex  macros.tex  packages.tex  xmp.tex
doc/videos/: README.txt  test_3D_dbscan.mkv  (+5 more)
indexing-table/: README.md
indexing-table/esp32/fw-os-esp32-dev/main/: CMakeLists.txt  Kconfig  comm_endpoint.cpp  comm_endpoint.h  idf_component.yml  motor_control.cpp  motor_control.h  os_core.cpp  os_core.h  os_core_tasker_ids.h
indexing-table/esp32/fw-os-esp32-dev/main/serial_interface/: serial_interface.cpp  serial_interface.h
indexing-table/esp32/main/: CMakeLists.txt  Kconfig  app_main.cpp  comm_endpoint.cpp  comm_endpoint.h  idf_component.yml  os_core.cpp  os_core.h
indexing-table/esp32/main/stepper_control/: esp32-hal-gpio.c  esp32-hal-gpio.h  stepper_control.cpp  stepper_control.h  stepper_hal.cpp  stepper_hal.h
matlab/: README.md  app.m  dataProcessor.m  main.m  out.txt  platformControl.m  preferences.m  radar.m  radarBuffer.m  radarDataCube.m  zeroCube.cpp
notes/: poznamky.tex
(+59 files in other folders)
